apps/n8n/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: "n8n.entropymaker.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
  tls:
    - hosts:
        - "n8n.entropymaker.com"
      secretName: entropymaker-com-tls
